// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`live() / liveOf() compile: query-ws 1`] = `"LIVE SELECT type::fields($bind__4) FROM $bind__5 WHERE age = $bind__6 FETCH type::fields($bind__7)"`;

exports[`live() / liveOf() compile: bindings-ws 1`] = `
{
  "bind__4": [
    "age",
    "test",
    "lastname",
  ],
  "bind__5": Table {},
  "bind__6": 30,
  "bind__7": [
    "foo",
  ],
}
`;

exports[`live() / liveOf() compile: query-mem 1`] = `"LIVE SELECT type::fields($bind__3) FROM $bind__4 WHERE age = $bind__5 FETCH type::fields($bind__6)"`;

exports[`live() / liveOf() compile: bindings-mem 1`] = `
{
  "bind__3": [
    "age",
    "test",
    "lastname",
  ],
  "bind__4": Table {},
  "bind__5": 30,
  "bind__6": [
    "foo",
  ],
}
`;
